src/objects/Affiliation__c.object
<CustomObject>
    <description>Affiliation</description>
    <fields>
        <fullName>Application_Type__c</fullName>
        <description>Application Type</description>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <formula>IF(Credential__c!= null, Credential__r.MUSW__Applicant__r.Id, 
IF(Permit_Plan_Review__c!= null,  Permit_Plan_Review__r.MUSW__Applicant__r.Id,null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Permit/Plan Review/Credential Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_s_City__c</fullName>
        <description>Contact&apos;s City</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact&apos;s City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_s_Credential_Number__c</fullName>
        <description>Contact&apos;s Credential Number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact&apos;s Credential Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_s_Email__c</fullName>
        <description>Contact&apos;s Email</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_s_Last_Name__c</fullName>
        <description>Contact&apos;s Last Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact&apos;s Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_s_Middle_Name__c</fullName>
        <description>Contact&apos;s Middle Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact&apos;s Middle Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_s_Name__c</fullName>
        <description>Contact&apos;s Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact&apos;s First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_s_Phone__c</fullName>
        <description>Contact&apos;s Phone</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact&apos;s Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_s_Street_Address__c</fullName>
        <description>Contact&apos;s Street Address</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact&apos;s Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_s_Zip_code__c</fullName>
        <description>Zip code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact&apos;s Zip code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_s_state__c</fullName>
        <description>Contact&apos;s State</description>
        <label>Contact&apos;s State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State_Provinces</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credential_Name__c</fullName>
        <description>Name of the Credential</description>
        <formula>TEXT(Credential__r.Credential__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credential Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Credential</description>
        <label>Credential</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Affiliations</relationshipLabel>
        <relationshipName>Affiliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <description>End date of the Affiliation</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External Id of the record</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Source__c</fullName>
        <description>External Source</description>
        <encryptionScheme>None</encryptionScheme>
        <label>External Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit_Plan_Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permit / Plan Review</label>
        <referenceTo>MUSW__Permit2__c</referenceTo>
        <relationshipLabel>Affiliations</relationshipLabel>
        <relationshipName>Affiliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Contact</description>
        <label>Related Contact to the affiliation</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Affiliations</relationshipLabel>
        <relationshipName>Affiliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service Request</description>
        <label>Service Request</label>
        <referenceTo>MUSW__Application2__c</referenceTo>
        <relationshipLabel>Affiliations</relationshipLabel>
        <relationshipName>Affiliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start Date of affiliation</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of Affiliation</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>General_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of Affiliation</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Type_of_Affiliation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Co_owner__c</fullName>
        <description>Type of Co-owner</description>
        <label>Type of Co-owner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Type_of_Co_Owner</valueSetName>
        </valueSet>
    </fields>
    <label>Affiliation</label>
    <nameField>
        <displayFormat>AFF- {0000}</displayFormat>
        <label>Affiliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliations</pluralLabel>
    <recordTypes>
        <fullName>Delegated_Agent_Affiliation</fullName>
        <active>true</active>
        <label>Delegated Agent Affiliation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Manufactured_Homes_Titling_Affiliation</fullName>
        <active>true</active>
        <label>Manufactured Homes Titling Affiliation</label>
    </recordTypes>
    <recordTypes>
        <fullName>POWTS_Affiliation</fullName>
        <active>true</active>
        <label>POWTS Affiliation</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>